Get the TfL API URL from a Cloud Foundry service instead of the properties file
Signed-off-by: Tom Anderson <toanderson@pivotal.io>